Adicionar exceptions personalizadas, testes unitários/integracao e workflow do SonarCloud